--- a/vercel.json
+++ b/vercel.json
@@ -12,6 +12,10 @@
         "schedule": "0 0 * * *"
       },
       {
+        "path": "/api/scrape",
+        "schedule": "0 17 * * *"
+      },
+      {
         "path": "/upload-movies",
         "schedule": "0 5 * * *"
       }
